fix:change gap

--- a/style/main.css
+++ b/style/main.css
@@ -100,7 +100,7 @@ font-size: 8px;
 a:hover{
     color: blueviolet;
 }
-a:active{
+a.active{
     color: blueviolet;
 }
 .around{
@@ -189,4 +189,64 @@ h1{
 .newbread{
     width: 100vw;
     height: 80vh;
+}
+
+
+
+footer {
+    background-color: rgb(168, 57, 57);
+    color: #ddd;
+    padding: 40px 20px;
+}
+
+.footer-container {
+    max-width: 1200px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
+}
+
+.footer-section {
+    flex: 1 1 250px;
+}
+
+.footer-section h3 {
+    color: #d19346;
+    margin-bottom: 15px;
+    font-size: 18px;
+}
+
+.footer-section p,
+.footer-section a {
+    color: white;
+    font-size: 14px;
+    text-decoration: none;
+    line-height: 1.6;
+}
+
+.footer-section a:hover {
+    color: #7512f6;
+}
+
+.social-icons a {
+    display: inline-block;
+    margin-right: 12px;
+    font-size: 18px;
+    color: white;
+    transition: color 0.3s;
+}
+
+.social-icons a:hover {
+    color: #1313f6;
+}
+
+.footer-bottom {
+    text-align: center;
+    margin-top: 30px;
+    border-top: 1px solid #444;
+    padding-top: 15px;
+    font-size: 13px;
+    color: white;
 }
